[project]
name = "lerobot-gamepad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MarvinChung", email = "marvin852316497@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"